# terax-ai

./: .gitignore  package.json  pnpm-lock.yaml  remote.html  vite.config.ts
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/modules/: agent.rs  agent_hook.mjs  ai_history.rs  mod.rs  workspace.rs
src-tauri/src/modules/broadcast/: bus.rs  commands.rs  mod.rs  model.rs  notify_out.rs  server.rs  token.rs  watch.rs
src-tauri/src/modules/fs/: grep.rs  mutate.rs  watch.rs
src-tauri/src/modules/pty/: agent_detect.rs  mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/transcript/: claude.rs  codex.rs  command_code.rs  cursor.rs  mod.rs  reader.rs
src-tauri/tests/: fs_search.rs
src/app/: App.tsx
src/components/: ErrorBoundary.tsx  WindowControls.tsx
src/lib/: launchDir.ts  platform.ts  relativeTime.ts  uiLog.ts
src/modules/agents/components/: AgentNotificationsBridge.tsx  NotificationBell.tsx
src/modules/agents/lib/: agentIcon.tsx  cursorResume.test.ts  cursorResume.ts  hookWatchdog.ts  statusLabel.ts  types.ts
src/modules/agents/store/: agentStore.ts
src/modules/ai-history/: AiHistoryPanel.tsx  AiSessionDiffPane.tsx  SessionChangesPanel.tsx  SessionDiffEditor.tsx  index.ts
src/modules/ai-history/lib/: sessionTabStore.ts  useAiHistory.ts  useSessionChanges.ts
src/modules/ai/lib/: agent.ts  native.ts
src/modules/broadcast/: BroadcastIndicator.tsx  api.ts  useBroadcastAutoStart.ts  useBroadcastStore.ts
src/modules/editor/: AiDiffPane.tsx  EditorPane.tsx  GitDiffPane.tsx  customEditorThemes.ts  useCustomEditorThemesStore.ts
src/modules/editor/lib/: gitGutter.ts  themes.ts  vscodeTheme.ts
src/modules/explorer/: ExplorerContentSearch.tsx  FileExplorer.tsx  PasteConfirmDialog.tsx  TreeRow.tsx  index.ts
src/modules/explorer/lib/: explorerDnd.test.ts  explorerDnd.ts  gitDecoration.test.ts  gitDecoration.ts  iconResolver.ts  osClipboard.ts  (+6 more)
src/modules/header/: Header.tsx
src/modules/markdown/: MarkdownContent.tsx  MarkdownPreviewPane.tsx  index.ts
src/modules/settings/: openSettingsWindow.ts  store.ts
src/modules/shortcuts/: shortcuts.ts
src/modules/sidebar/: SidebarRail.tsx  types.ts
src/modules/source-control/: SourceControlPanel.tsx
src/modules/tabs/: TabBar.tsx  index.ts
src/modules/terminal/: index.ts
src/modules/terminals/: FolderStrip.tsx  TerminalListPanel.tsx  activeFolderStore.ts
src/modules/theme/: ThemeProvider.tsx
src/modules/updater/: UpdaterContext.tsx  UpdaterDialog.tsx  index.ts  useUpdater.ts
src/remote/: RemoteApp.tsx  main.tsx  remote.css
src/remote/components/: AgentFilter.tsx  DiffView.tsx  MessageBlock.tsx  RemoteErrorBoundary.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusDot.tsx  TerminalPanel.tsx  ToolCard.tsx  Transcript.tsx
src/remote/lib/: api.ts  diff.test.ts  diff.ts  mergeTranscript.test.ts  mergeTranscript.ts  path.test.ts  path.ts  prefs.tsx  sessionContext.tsx  types.ts  useHashSession.ts  useIndex.ts  useStream.ts  useTranscript.ts
src/settings/: SettingsApp.tsx  main.tsx
src/settings/sections/: AboutSection.tsx  BroadcastSection.tsx  GeneralSection.tsx  ThemesSection.tsx
src/styles/: globals.css
(+17 files in other folders)
